package squares

import pieces.Piece

interface Square {
    fun getRow(): Int
    fun getColumn(): Int
}